--- a/HTML/Content/Navbar.html
+++ b/HTML/Content/Navbar.html
@@ -1,32 +1,33 @@
 <!--Navbar blue-->
 <link rel="stylesheet" href="../PHP/Style.php/Content/Navbar.scss">
-<nav class="navbar navbar-expand-lg navbar-dark teal bg-dark-blue">
-    <a class="navbar-brand" href="HomePage.php"><img src="../Files/Imagens/LogoFibraOtica.png" alt=""></a>
-    <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent"
-        aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
-        <span class="navbar-toggler-icon"></span>
-    </button>
-    <div class="collapse navbar-collapse" id="navbarSupportedContent">
-        <ul class="navbar-nav mr-auto">
-            <li class="nav-item">
-                <a class="nav-link color-white" href="../SpeedTester.php">Speed Tester</a>
-            </li>
+<nav class="navbar navbar-expand-lg navbar-dark teal">
+    <div class="container">
+        <a class="navbar-brand" href="HomePage.php"><img src="../Files/Imagens/LogoFibraOtica.png" alt=""></a>
+        <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent"
+            aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+            <span class="navbar-toggler-icon"></span>
+        </button>
+        <div class="collapse navbar-collapse" id="navbarSupportedContent">
+            <ul class="navbar-nav ml-auto">
+                <li class="nav-item">
+                    <a class="nav-link color-white" href="../SpeedTester.php">Speed Tester</a>
+                </li>
 
-            <li class="nav-item">
-                <a class="nav-link color-white" href="#">Sobre Nos</a>
+                <li class="nav-item">
+                    <a class="nav-link color-white" href="#">Sobre Nos</a>
 
-            </li>
-            <li class="nav-item dropdown">
-                <a class="nav-link dropdown-toggle color-white" id="navbarDropdownMenuLink" data-toggle="dropdown"
-                    aria-haspopup="true" aria-expanded="false">Área Técnica
-                </a>
-                <div class="dropdown-menu dropdown-primary" aria-labelledby="navbarDropdownMenuLink">
-                    <a class="dropdown-item" href="../BackOfficeTecnico.php">Tecnico</a>
-                    <a class="dropdown-item" href="../BackOfficeGeral.php">Geral</a>
-                </div>
-            </li>
-        </ul>
-
-
+                </li>
+                <li class="nav-item dropdown">
+                    <a class="nav-link dropdown-toggle color-white" id="navbarDropdownMenuLink" data-toggle="dropdown"
+                        aria-haspopup="true" aria-expanded="false">Área Técnica
+                    </a>
+                    <div class="dropdown-menu dropdown-primary" aria-labelledby="navbarDropdownMenuLink">
+                        <a class="dropdown-item" href="../BackOfficeTecnico.php">Tecnico</a>
+                        <a class="dropdown-item" href="../BackOfficeGeral.php">Geral</a>
+                    </div>
+                </li>
+            </ul>
+        </div>
     </div>
+
 </nav>
