--- a/HTML/Content/Navbar.html
+++ b/HTML/Content/Navbar.html
@@ -1,6 +1,6 @@
 <!--Navbar blue-->
 <link rel="stylesheet" href="../PHP/Style.php/Content/Navbar.scss">
-<nav class="navbar navbar-expand-lg navbar-dark teal">
+<nav class="navbar navbar-expand-lg navbar-light teal">
     <div class="container">
         <a class="navbar-brand" href="HomePage.php"><img src="../Files/Imagens/LogoFibraOtica.png" alt=""></a>
         <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent"
@@ -10,7 +10,7 @@
         <div class="collapse navbar-collapse" id="navbarSupportedContent">
             <ul class="navbar-nav ml-auto">
                 <li class="nav-item">
-                    <a class="nav-link color-white" href="../SpeedTester.php">Speed Tester</a>
+                    <a class="nav-link color-white" href="SpeedTester.php">Speed Tester</a>
                 </li>
 
                 <li class="nav-item">
@@ -22,8 +22,8 @@
                         aria-haspopup="true" aria-expanded="false">Área Técnica
                     </a>
                     <div class="dropdown-menu dropdown-primary" aria-labelledby="navbarDropdownMenuLink">
-                        <a class="dropdown-item" href="../BackOfficeTecnico.php">Tecnico</a>
-                        <a class="dropdown-item" href="../BackOfficeGeral.php">Geral</a>
+                        <a class="dropdown-item" href="BackOfficeTecnico.php">Tecnico</a>
+                        <a class="dropdown-item" href="BackOfficeGeral.php">Geral</a>
                     </div>
                 </li>
             </ul>
